# parselibcpp

./: CMakeLists.txt  README.md  main.cpp  main.py  pyparse.py
PyCpp/: PyCppCli.py  PyCppGui.py  README.md  __init__.py  cmakegen.py  factory.py  helpers.py  parsesession.py  pycpp.py  pycppeng.py  pyparse.py
PyCpp/data/: grammar.grm  test2.java
PyCpp/data/ext/: body.grm  members.grm  tokens.grm
PyCpp/data/glib/: attribute.grm  body.grm  class.grm  construct.grm  import.grm  method.grm  tokens.grm  type.grm
PyCpp/data/rc_libs/: README.md  boost.json
PyCpp/data/test_srcs/: test1.cpy  test1.java  test2.java
PyCpp/data/test_srcs/itf1/: test1.cpy  test1.cxx
PyCpp/data/test_srcs/itf2/: test2.cpy  test2.cxx
PyCpp/gui/: PyCppGui.py  PyCppWidget.py  pycpp_template.ui
PyCpp/observers/: CppGenerator.py  GatewayGenerator.py  HppGenerator.py  PyGwGenerator.py  TemplGenerator.py  __init__.py  observer.py
PyCpp/streams/: FileStream.py  StringStream.py  __init__.py
PyCpp/utils/: __init__.py  cmakegen.py  factory.py  helpers.py  parsesession.py  pycppeng.py
PyCppGui/: PyCppWidget.py  pycpp_template.ui
data/: grammar.grm  somewhere.pkl  test.java  test2.java
data/experiment/: grammar.source  grammarvo2.grm
data/ext/: body.grm  members.grm  tokens.grm
data/ext/sub/: body.grm
datarc/: grammar.grm  test.java
datarc/ext/: tokens.grm
generator/: generator.cpp  generator.hpp
parselib/: README.md  main.cpp  main_test.cpp  parselibinstance.cpp  parselibinstance.hpp  parsesession.cpp  parsesession.hpp  pyparselib.cpp
parselib/datastructure/: closure_types.h  common_types.cpp  common_types.h  grammar.cpp  grammar.h  lexer.cpp  lexer.hpp  parsetree.cpp  parsetree.hpp
parselib/datastructure/operations/: generalop.cpp  generalop.hpp  normop.cpp  normop.hpp
parselib/operations/: generalop.cpp  generalop.hpp  naiveparsers.cpp  naiveparsers.hpp  normop.cpp  normop.hpp
parselib/parsers/: absparser.hpp  cyk.cpp  cyk.hpp  grammarparser.cpp  grammarparser.hpp  lexer.cpp  lexer.hpp  lr_zero.cpp  lr_zero.hpp  naiveparsers.cpp  naiveparsers.hpp  parsers.hpp  seqparsers.cpp  seqparsers.hpp
parselib/tests/: test_template.h
parselib/utils/: io.cpp  io.hpp  logger.cpp  logger.h  preprocessor.hpp
